cluster/apps/mediaserver/sonarr/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sonarr
  namespace: mediaserver
spec:
  hosts:
    - sonarr.${ROOT_DOMAIN}
  gateways:
    - istio-ingress/cluster-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 8989
            host: sonarr.mediaserver.svc.cluster.local
